# Picture-In-Picture

./: Cargo.toml  README.md
src/: capture.rs  capture_backed.rs  capture_backend.rs  capture_pw.rs  main.rs  overlay.rs  session.rs  tray.rs  window_list.rs  window_picker.rs
