[package]
name = "pip-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.13", features = ["cursor", "composite", "shm", "damage", "randr"] }
winit = "0.30"
softbuffer = "0.4"
libc = "0.2"
ksni = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
# Wayland support via xdg-desktop-portal + PipeWire
ashpd = { version = "0.13", features = ["pipewire", "screencast"] }
pipewire = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
